# talx

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: regenerate-icons.py
src/: App.tsx  Dashboard.tsx  Settings.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  db.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/asr/: groq.rs  mod.rs  soniox.rs
src-tauri/src/llm/: groq.rs  mod.rs  openai.rs
src/components/: DragHandle.tsx  IdlePill.tsx  RecordingCard.tsx  ResultCard.tsx  Widget.tsx
src/components/dashboard/: DashboardSidebar.tsx  HomePage.tsx  ProviderStatus.tsx  RecentTranscriptions.tsx  StatCard.tsx
src/components/settings/: AboutTab.tsx  ApiKeysTab.tsx  AppearanceTab.tsx  GeneralTab.tsx  Sidebar.tsx
src/hooks/: useDrag.ts  useFirstUse.ts  useRecordingControl.ts  useSessionStore.ts
src/lib/: settings.ts  uiErrors.ts
src/stores/: sessionStore.ts
src/styles/: App.css  animations.css  dashboard.css  settings.css  tokens.css
src/utils/: diffRanges.ts
