[package]
name = "talx"
version = "0.1.0"
description = "Voice-to-text dictation tool"
authors = ["Talx Contributors"]
edition = "2021"

[lib]
name = "talx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
