[package]
name = "talx"
version = "0.1.0"
description = "Voice-to-text dictation tool"
authors = ["Talx Contributors"]
edition = "2021"

[lib]
name = "talx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tauri-plugin-global-shortcut = "2"
futures-util = "0.3"
tokio = { version = "1.50.0", features = ["sync", "macros", "time", "rt"] }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
